# FotoTrapC

./: CMakeLists.txt  README.md
FotoTrapC/: CMakeLists.txt  README.md  camera.cpp  frametest.cpp  main.cpp  savevideo.cpp
